Modifying different file name and config for first post

--- a/overrides/partials/header.html
+++ b/overrides/partials/header.html
@@ -32,7 +32,7 @@
     <div class="workspace-selector">
       <select id="workspace-dropdown" onchange="changeWorkspace(this.value)">
         <option value="">Select Workspace</option>
-        <option value="/knowledge-base-platform/">Main</option>
+        <option value="/kb-platform/">Main</option>
         <option value="/kb-engineering/">Engineering</option>
         <option value="/kb-grc/">GRC</option>
         <option value="/kb-networking/">Networking</option>
